<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/save_favorites_dialog"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/combo_name"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/combo_hint"
        android:inputType="text" />

</LinearLayout>