<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/favorites_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorites.FavoritesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/favorites_fragment_title"
            style="@style/FragmentTitle"
            android:text="@string/favorites_combos" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoritesList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="0.9" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/no_favorites_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_favorites_text"
        android:textColor="@android:color/white"
        android:visibility="gone" />

</FrameLayout>