...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_image">

    </androidx.appcompat.widget.AppCompatTextView>

    <SeekBar
        android:id="@+id/sound_volume"
        android:theme="@style/WhiteSeekBarTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:padding="10dp"
        android:visibility="invisible"
...
